#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT([libmilui], [0.0.1])
AC_CONFIG_SRCDIR([src/misc/misc.c])
AC_CONFIG_HEADERS([miluiconfig.h])
AC_CANONICAL_SYSTEM

MilUI_MAJOR_VERSION=0
MilUI_MINOR_VERSION=0
MilUI_MICRO_VERSION=1
MilUI_INTERFACE_AGE=0
MilUI_BINARY_AGE=0
MilUI_VERSION=$MilUI_MAJOR_VERSION.$MilUI_MINOR_VERSION.$MilUI_MICRO_VERSION

AC_SUBST(MilUI_MAJOR_VERSION)
AC_SUBST(MilUI_MINOR_VERSION)
AC_SUBST(MilUI_MICRO_VERSION)
AC_SUBST(MilUI_INTERFACE_AGE)
AC_SUBST(MilUI_BINARY_AGE)
AC_SUBST(MilUI_VERSION)

dnl ========================================================================
dnl libtool versioning
LT_RELEASE=$MilUI_MAJOR_VERSION.$MilUI_MINOR_VERSION
LT_CURRENT=`expr $MilUI_MICRO_VERSION - $MilUI_INTERFACE_AGE`
LT_REVISION=$MilUI_INTERFACE_AGE
LT_AGE=`expr $MilUI_BINARY_AGE - $MilUI_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([foreign no-define])

dnl ========================================================================
dnl Check for tools
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_LD
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl ========================================================================
dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(sys/types.h sys/time.h termio.h unistd.h math.h locale.h)

# Checks for libraries.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(time mktime localtime strdup strcasecmp strncasecmp strerror setlocale getpt)

AC_OUTPUT(
Makefile
include/Makefile
src/Makefile
src/misc/Makefile
src/stdlib/Makefile
src/thread/Makefile
src/thread/pthread/Makefile
)

