# The input Makefile for MilUI header files

# The directory where the include files will be installed
libmiluiincludedir = $(includedir)/milui

# Which header files to install
libmiluiinclude_HEADERS = begin_code.h  byteorder.h  close_code.h  common.h  coobase.h  coo.h  MIL_endian.h  MIL_rwops.h  surface.h

