# The input Makefile for MilUI header files

# The directory where the include files will be installed
libmiluiincludedir = $(includedir)/milui

SUBDIRS = configs

# Which header files to install
libmiluiinclude_HEADERS = begin_code.h close_code.h coo.h MIL_endian.h MIL_stdinc.h MIL_types.h \
						  coobase.h MIL_config.h MIL_mutex.h MIL_rwops.h MIL_video.h MIL_application.h
