noinst_PROGRAMS=inherit object virtual duplicator rwops performance application bitmap_sub screen_test

MILUI_LIBS=-lmilui -lpthread

inherit_SOURCES=inherit.c
inherit_LDADD=$(MILUI_LIBS)

object_SOURCES=object.c
object_LDADD=$(MILUI_LIBS)

virtual_SOURCES=virtual.c
virtual_LDADD=$(MILUI_LIBS)

duplicator_SOURCES=duplicator.c
duplicator_LDADD=$(MILUI_LIBS)

rwops_SOURCES=rwops_test.c
rwops_LDADD=$(MILUI_LIBS)

performance_SOURCES=performance.c
performance_LDADD=$(MILUI_LIBS)

application_SOURCES=application.c
application_LDADD=$(MILUI_LIBS)

bitmap_sub_SOURCES=bitmap_sub.c
bitmap_sub_LDADD=$(MILUI_LIBS)

screen_test_SOURCES=screen_test.c
screen_test_LDADD=$(MILUI_LIBS)
