#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([milui-test], [0.1])
AC_CONFIG_SRCDIR([object.c])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([foreign no-define])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_CHECK_LIB([milui], [look_for_virtual_function])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
