# The input Makefile for MilUI header files

# The directory where the include files will be installed
libmiluiincludedir = $(includedir)/milui/configs

# Which header files to install
libmiluiinclude_HEADERS = MIL_config_dreamcast.h MIL_config_macosx.h MIL_config_nds.h MIL_config_symbian.h \
						  MIL_config_macos.h MIL_config_minimal.h MIL_config_os2.h MIL_config_win32.h MIL_platform.h 
