INCLUDES = -I../../include -I../include -I../

noinst_LTLIBRARIES = libgdi.la

libgdi_la_SOURCES = blit.c RLEaccel.c bmp.c pixels.c blit_0.c blit_1.c blit_N.c blit_A.c rect.c stretch.c \
					image.c bitmap.c gc.c img_loader.c gdi_base.c

EXTRA_DIST = blit.c RLEaccel.c bmp.c pixels.c blit_0.c blit_1.c blit_N.c blit_A.c rect.c stretch.c \
			 image.c bitmap.c gc.c img_loader.c gdi_base.c
